merged head into branch for futher jsp 2.2 tests